# protopresence

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: release.yml
packaging/: build_gui.sh  gui_launcher.py  protopresence.service
src/protopresence/: __init__.py  appinfo.py  config.py  daemon.py  detect.py  gui.py  presence.py  steam.py  vdf.py
tests/: test_appinfo.py  test_config.py  test_detect.py  test_presence.py  test_steam.py  test_vdf.py
