[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "protopresence"
version = "0.1.0"
description = "Discord Rich Presence daemon for Steam/Proton/Wine games and native Linux apps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "luna" }]
keywords = ["discord", "rich-presence", "steam", "proton", "wine", "linux"]
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
]
dependencies = [
    "pypresence>=4.3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
build = ["pyinstaller>=6.0"]

[project.scripts]
protopresence = "protopresence.daemon:main"
protopresence-gui = "protopresence.gui:main"

[project.urls]
Homepage = "https://github.com/frgmntedflower/protopresence"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
protopresence = ["assets/*.png", "assets/*.svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
